[tool.poetry]
name = "nonebot_plugin_bilibili_viode"
version = "1.0.0"
description = "一个nonebot2插件，用于获取哔哩哔哩伪分享卡片"
authors = ["ASTWY <astwy@outlook.com>"]
license = "MIT"
readme = "README.markdown"
homepage = "https://pypi.org/project/nonebot_plugin_bilibili_viode/"
repository = "https://github.com/astwy/nonebot_plugin_bilibili_viode"

[tool.poetry.dependencies]
python = "^3.8.1"
httpx = "^0.23.3"
nonebot-plugin-guild-patch = "^0.2.3"
qrcode = "^7.4.2"
pillow = "^9.4.0"
nonebot2 = "^2.0.0rc3"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
